# wsgc

./: CppPrototype.md  FadingModels.md  MFSK_Doppler_spread.md  MFSK_JT_modes_galore.md  ProjectHome.md  RSSoft_vs_KV.md  SignalToNoiseModel.md  SimulationAWGN.md  Spectrum.md  SynchronizationScheme.md  WSGC_vs_MFSK.md
doc/: wsgc_introduction_fr.odt
img/: SNRlim_vs_m.ods  SyncScheme.odg  wsgc_cpp_proto_correlator.dot  wsgc_cpp_proto_fading_model.dot  wsgc_cpp_proto_fading_process.dot  wsgc_cpp_proto_no_fading_process.dot  wsgc_cpp_proto_overview.dot  wsgc_cpp_proto_source.dot
proto_cpp/: .gitignore  AUTHORS  README  README.cuda  aclocal.m4  bootstrap.sh  configure  configure.ac  setenv_cuda
proto_cpp/doc/: .gitignore  Doxyfile.in  install_dot.txt
proto_cpp/scripts/: launcher.sh  validate.sh
proto_cpp/src/: AutocorrelationRecord.cpp  AutocorrelationRecord.h  CCSoft_DecisionBox.cpp  CCSoft_DecisionBox.h  CCSoft_Engine.cpp  CCSoft_Engine.h  CCSoft_Engine_defs.h  CodeModulator.h  CodeModulator_BPSK.cpp  CodeModulator_BPSK.h  CodeModulator_CW_Test.cpp  CodeModulator_CW_Test.h  CodeModulator_DBPSK.cpp  CodeModulator_DBPSK.h  CodeModulator_MFSK.cpp  CodeModulator_MFSK.h  CodeModulator_OOK.cpp  CodeModulator_OOK.h  CodeModulator_OOK_detection.cpp  CodeModulator_OOK_detection.h  ContinuousPhaseCarrier.cpp  ContinuousPhaseCarrier.h  CorrelationRecord.cpp  CorrelationRecord.h  Correlator.h  CudaDeviceManager.cpp  CudaDeviceManager.h  CudaManager.cu  CudaManager.h  Cuda_Averagers.h  Cuda_IFFTAveragingRange.h  Cuda_IndexTransforms.h  Cuda_Operators.cu  Cuda_Operators.h  Cuda_Repeat2ShiftedRange.h  Cuda_RepeatIncrementalRange.h  Cuda_RepeatRange.h  Cuda_RepeatShiftedRange.h  Cuda_RepeatValue.h  Cuda_ShiftedBySegmentsRange.h  (+197 more)
